--- a/package.json
+++ b/package.json
@@ -1,15 +1,19 @@
 {
   "name": "discord-autoposter",
   "version": "1.0.0",
-  "main": "index.js",
+  "main": "src/index.ts",
   "license": "MIT",
   "scripts": {
-    "start": "nodemon src/index.ts"
+    "start": "npm run build && electron ./dist/index.js",
+    "build": "tsc",
+    "dev": "nodemon src/index.ts"
   },
   "dependencies": {
     "axios": "^1.7.7"
   },
   "devDependencies": {
+    "@types/electron": "^1.6.10",
+    "electron": "^32.1.2",
     "nodemon": "^3.1.7",
     "ts-node": "^10.9.2",
     "typescript": "^5.6.2"
