--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "dev": "nodemon src/index.ts"
   },
   "dependencies": {
-    "axios": "^1.7.7"
+    "axios": "^1.7.7",
+    "electron-store": "^8.2.0"
   },
   "devDependencies": {
     "@types/electron": "^1.6.10",
