--- a/package.json
+++ b/package.json
@@ -10,10 +10,12 @@
   },
   "dependencies": {
     "axios": "^1.7.7",
-    "electron-store": "^8.2.0"
+    "electron-store": "^8.2.0",
+    "uuid": "^10.0.0"
   },
   "devDependencies": {
     "@types/electron": "^1.6.10",
+    "@types/uuid": "^10.0.0",
     "electron": "^32.1.2",
     "nodemon": "^3.1.7",
     "ts-node": "^10.9.2",
