--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "axios": "^1.7.7",
     "electron-store": "^8.2.0",
+    "http-status-codes": "^2.3.0",
     "uuid": "^10.0.0"
   },
   "devDependencies": {
